--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,12 @@
 			<version>2.10.3</version>
 		</dependency>
 
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.3.1</version>
+		</dependency>
+
 
 	</dependencies>
 </project>
